[gd_scene load_steps=6 format=3 uid="uid://cr8fvn1kh4yqo"]

[ext_resource type="Script" path="res://scripts/ui/settings_menu.gd" id="1_settings"]
[ext_resource type="Texture2D" uid="uid://b4c66sov7o72l" path="res://assets/ui/kenny/button_rectangle_depth_flat.png" id="2_button_normal"]
[ext_resource type="Texture2D" uid="uid://c4etfg62owyda" path="res://assets/ui/kenny/button_rectangle_depth_gradient.png" id="3_button_pressed"]
[ext_resource type="FontFile" uid="uid://bg017qo6vfy7p" path="res://assets/ui/kenny/fonts/Kenney Future Narrow.ttf" id="4_font"]
[ext_resource type="FontFile" uid="uid://dq2bxbbw8nb5l" path="res://assets/ui/kenny/fonts/Kenney Future.ttf" id="5_font_title"]

[node name="SettingsMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_settings")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -250.0
offset_right = 300.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = 30.0
offset_right = -30.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 25

[node name="Title" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_font_title")
theme_override_font_sizes/font_size = 48
text = "SETTINGS"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="MusicContainer" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="MusicLabel" type="Label" parent="Panel/VBoxContainer/MusicContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_font")
theme_override_font_sizes/font_size = 24
text = "Music Volume"

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer/MusicContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="MusicSlider" type="HSlider" parent="Panel/VBoxContainer/MusicContainer/HBoxContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 3
max_value = 100.0
step = 1.0
value = 80.0

[node name="MusicValue" type="Label" parent="Panel/VBoxContainer/MusicContainer/HBoxContainer"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("4_font")
theme_override_font_sizes/font_size = 20
text = "80%"
horizontal_alignment = 2

[node name="SFXContainer" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="SFXLabel" type="Label" parent="Panel/VBoxContainer/SFXContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_font")
theme_override_font_sizes/font_size = 24
text = "Sound Effects Volume"

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer/SFXContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="SFXSlider" type="HSlider" parent="Panel/VBoxContainer/SFXContainer/HBoxContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 3
max_value = 100.0
step = 1.0
value = 80.0

[node name="SFXValue" type="Label" parent="Panel/VBoxContainer/SFXContainer/HBoxContainer"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("4_font")
theme_override_font_sizes/font_size = 20
text = "80%"
horizontal_alignment = 2

[node name="Spacer" type="Control" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="BackButton" type="TextureButton" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("2_button_normal")
texture_pressed = ExtResource("3_button_pressed")
stretch_mode = 0

[node name="Label" type="Label" parent="Panel/VBoxContainer/BackButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_font")
theme_override_font_sizes/font_size = 25
text = "BACK"
horizontal_alignment = 1
vertical_alignment = 1
